--- a/resume.html
+++ b/resume.html
@@ -51,63 +51,16 @@
                 <div class="row">
                     <div class="col-12">
                         <h3 class="section-heading uppercase">
-                            Personal Info
+                            Work History
                         </h3>
                     </div>
                 </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Name:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            Rosie Odenkirk
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Address:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            17 Riverdale, Catskills, NY USA
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Phone:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            555 204 1973
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Email:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            rosie.odenkirk@hansaw.com
-                        </p>
-                    </div>
-                </div>
+
             </div>
             <div class="col-md-8 bg-color-three-reason section-column">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">About Me</h3>
+                        <h3 class="section-heading uppercase">My Skills</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -136,22 +89,6 @@
                                     I follow form as well as function. I know that the aesthetics of effective 
                                     design combined with application speed, security and reliability combine to 
                                     create a great user experience.
-                                </p>
-                            </div>
-                            
-                        </div>
-                    </div>
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Why Hire Me</h4>
-                                <p>
-                                    I work quickly and effectively in getting things built and working across
-                                    the stack. I'm an excellent communicator who thrives in bright and 
-                                    enthusiastic teams and I'm also a self starter when working solo.
                                 </p>
                             </div>
                             
